--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                     <h2>Highly Customized Design</h2>
                     <h4>Price: $250 Only</h4>
                     <p class="white-text">You can get fully customized design by our professionals. Buy it now for a great discount.</p>
-                    <p class="white-text">This is your fourth panel</p>
+                    <p class="white-text">Swipe to get the 1st item...</p>
                 </div>
             </div>
 
