Add site link to Brand Logo & Image

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!--Navigation Starts-->
     <nav>
         <div class="nav-wrapper pink">
-            <a href="#" class="brand-logo">
+            <a href="https://soumya-99.github.io/WebOGraph/" class="brand-logo">
                 WebOGraph
             </a>
             <a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
@@ -41,8 +41,8 @@
                         <div class="background">
                             <img src="./img/material.jpg" style="width: 100%;">
                         </div>
-                        <a href="#user"><img class="circle" src="./ico/icon.jpeg"></a>
-                        <a href="#name"><span class="white-text name">WebOGraph</span></a>
+                        <a href="https://soumya-99.github.io/WebOGraph/"><img class="circle" src="./ico/icon.jpeg"></a>
+                        <a href="https://soumya-99.github.io/WebOGraph/"><span class="white-text name">WebOGraph</span></a>
                         <a href="#email"><span class="white-text email">soumya.no-reply@gmail.com</span></a>
                     </div>
                 </li>
