Added Responsive Maps

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
     <!--Parallax End-->
 
-    <!--Section Creativity-->
+    <!--Section Creativity Strats-->
     <section id="creativity">
         <div class="container">
             <h3 class="center" style="color: rgb(0, 138, 252);">Creativity</h3>
@@ -184,6 +184,7 @@
 
         </div>
     </section>
+    <!--Section Creativity End-->
 
     <!--Support Starts-->
     <section id="support">
@@ -263,6 +264,7 @@
     <!--Comments Start-->
     <div class="container">
         <h4 class="yellow-text text-darken-3">Leave a Comment Here</h4>
+        <div class="divider" style="background-color: #F4B400;"></div>
         <div class="row">
             <form class="col s12">
                 <div class="row">
@@ -283,18 +285,36 @@
     </div>
     <!--Comments End-->
 
+    <!--Maps Start-->
+    <div class="container">
+        <h4>Find Us On <span style="color: #4285F4">G</span><span style="color: #DB4437">o</span><span style="color: #F4B400">o</span><span
+            style="color: #4285F4">g</span><span style="color: #0F9D58">l</span><span style="color: #DB4437">e</span> Maps</h4>
+            <div class="divider"></div>
+        <div class="row" style="padding-top: 10px;">
+            <div class="col s12 m4 l8">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d14723.466620256018!2d88.33379029999999!3d22.69600735!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1590397038411!5m2!1sen!2sin"
+                    width="800" height="800" frameborder="0" style="height: 250px; width: 300px;" allowfullscreen="" aria-hidden="false" tabindex="0">
+                </iframe>
+            </div>
+        </div>
+    </div>
+    <!--Maps End-->
+
     <!--Footer Starts-->
     <footer class="page-footer pink accent-3">
         <div class="container">
             <div class="row">
                 <div class="col l6 s12">
                     <h5 class="white-text">About Us</h5>
+                    <div class="divider"></div>
                     <p class="grey-text text-lighten-4">
                         I am a Front-End Web Developer. If you need any website, contact me for a great materialized responsive design for your own business at a very fair price.
                     </p>
                 </div>
                 <div class="col l4 offset-l2 s12">
                     <h5 class="white-text">Popular Links</h5>
+                    <div class="divider"></div>
                     <ul>
                         <li><a class="grey-text text-lighten-3" href="#!">Contact No. 891XXXXXXX</a></li>
                         <li><a class="grey-text text-lighten-3" href="https://www.instagram.com/m0ndal.s0umyadeep/">Follow on Instagram</a></li>
