spelling mistake on ln_216

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <li class="collection-item avatar">
                         <!-- <img src="./yuna.jpg" alt="" class="circle"> -->
                         <i class="material-icons circle blue">backup</i>
-                        <span class="title"><strong>Steven Spillsburg</strong></span>
+                        <span class="title"><strong>Steven Spielberg</strong></span>
                         <p>
                             Hollywood Movie Maker
                             <br>
